3D interactive solar system orrery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
         <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
+        <div id="container">
+            <div class="object-info" id="sun" hidden>
+                <label class="object-title">SUN</label></br></br>
+                <label class="object-description">Сонце — це центр Сонячної системи, величезна зоря, що становить понад 99% її загальної маси. Його діаметр становить близько 1,39 мільйона кілометрів, і воно знаходиться на відстані приблизно 150 мільйонів кілометрів від Землі.</label>
+            </br></div>
+            <div class="object-info" id="mercury" hidden>
+                <label class="object-title">MERCURY</label></br></br>
+                <label class="object-description">Меркурій – найближча планета до Сонця, тому тут неймовірно спекотно вдень (до 430°C) і крижані ночі (-180°C). Меркурій не має атмосфери, тому не може зберігати тепло. Це найменша планета Сонячної системи, і рік тут триває всього 88 земних днів.</label>
+            </br></div>
+            <div class="object-info" id="venus" hidden>
+                <label class="object-title">VENUS</label></br></br>
+                <label class="object-description">Венера – планета, де панує парниковий ефект. Її атмосфера з вуглекислого газу утримує тепло, тому температура на поверхні перевищує 470°C – гарячіше, ніж на Меркурії. Венеру часто називають "сестрою Землі", адже їхні розміри та склад подібні, але умови життя – зовсім інші.</label>
+            </br></div>
+            <div class="object-info" id="earth" hidden>
+                <label class="object-title">EARTH</label></br></br>
+                <label class="object-description">Земля – єдина планета з відомим життям. Вона має атмосферу, багату на кисень, воду в трьох станах (рідкому, твердому й газоподібному) і ідеальний температурний баланс. Її місяць стабілізує нахил осі, що сприяє сезонним змінам.</label>
+            </br></div>
+            <div class="object-info" id="mars" hidden>
+                <label class="object-title">MARS</label></br></br>
+                <label class="object-description">Марс – червона планета, яка колись могла мати воду на поверхні. Марс має гору Олімп – найвищу в Сонячній системі, та Велику Долину – каньйон у 10 разів довший за Великий Каньйон на Землі. Атмосфера тонка і складається переважно з вуглекислого газу.</label>
+            </br></div>
+            <div class="object-info" id="jupiter" hidden>
+                <label class="object-title">JUPITER</label></br></br>
+                <label class="object-description">Юпітер – найбільша планета-гігант із складом переважно з газів (водню та гелію). Його Велика Червона Пляма – гігантський шторм, що триває сотні років. У Юпітера понад 80 супутників, зокрема Європа, де під льодовою поверхнею може ховатися океан.</label>
+            </br></div>
+            <div class="object-info" id="saturn" hidden>
+                <label class="object-title">SATURN</label></br></br>
+                <label class="object-description">Сатурн – відомий своїми величними кільцями, які складаються з частинок льоду та каменів. Він має понад 80 супутників, а його найбільший, Титан, має густу атмосферу і ріки метану, що робить його особливо цікавим для вчених.</label>
+            </br></div>
+            <div class="object-info" id="uranus" hidden>
+                <label class="object-title">URANUS</label></br></br>
+                <label class="object-description">Уран – блакитний гігант, який "лежить на боці". Його осьовий нахил складає близько 98°, що робить пори року найдивнішими серед усіх планет. Вітри на Урані можуть досягати швидкості 900 км/год, а його атмосфера містить метан, що надає йому синього відтінку.</label>
+            </br></div>
+            <div class="object-info" id="neptune" hidden>
+                <label class="object-title">NEPTUNE</label></br></br>
+                <label class="object-description">Нептун – планета штормів і вітрів. Найдальша і найхолодніша в Сонячній системі, вона славиться своїми потужними бурями, зокрема Темною Плямою – гігантським штормом, подібним до Юпітерової Червоної Плями. Тут вітри можуть досягати неймовірних 2 100 км/год.</label>
+            </br></div>
+        </div>
         <script type="importmap">
             {
                 "imports": {
